--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
     </div>
   </header>
 
-  <section id="presentacion" class="text-center py-16 px-4">
-    <h2 class="text-4xl font-bold mb-2">Software Developer</h2>
-    <p class="text-lg mb-4">Más de 9 años de experiencia en desarrollo mobile, liderazgo técnico, arquitectura limpia (Clean Architecture), MVVM, Kotlin, testing y CI/CD.</p>
-    <div class="flex justify-center gap-4 mb-4">
-      <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">Email</a>
-      <a href="https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/" target="_blank" class="underline">LinkedIn</a>
-      <a href="https://github.com/JorgeDaniel29" target="_blank" class="underline">GitHub</a>
+  <section id="presentacion" class="py-16 px-4">
+    <div class="max-w-4xl mx-auto flex flex-col sm:flex-row items-center gap-6">
+      <img src="profile.jpg" alt="Foto de Jorge Daniel Gonzalez" class="w-40 h-40 rounded-full object-cover border-4 border-gray-300 dark:border-gray-700" />
+      <div>
+        <h2 class="text-4xl font-bold mb-2">Software Developer</h2>
+        <ul class="text-sm space-y-1">
+          <li><strong>Email:</strong> <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></li>
+          <li><strong>Teléfono:</strong> +54 9 11 3020 8941</li>
+          <li><strong>Dirección:</strong> Dr. Gabriel Ardoino 490, Ramos Mejía, Buenos Aires</li>
+          <li><strong>LinkedIn:</strong> <a href="#" class="underline">https://www.linkedin.com/in/jorge-daniel-gonzalez-8783a2112/</a></li>
+          <li><strong>GitHub:</strong> <a href="#" class="underline">https://github.com/JorgeDaniel29</a></li>
+        </ul>
+      </div>
     </div>
-    <a href="CV_Jorge_Daniel_Gonzalez.pdf" download class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded">Descargar CV PDF</a>
   </section>
 
   <section id="resumen" class="px-4 py-10 max-w-4xl mx-auto">
@@ -43,60 +48,60 @@
   </section>
 
   <section id="experiencia" class="px-4 py-10 max-w-4xl mx-auto">
-    <h3 class="text-2xl font-bold mb-6 border-b pb-2">Experiencia Profesional</h3>
-    <div class="space-y-8">
-      <div>
-        <h4 class="text-xl font-semibold">Mercado Libre — Líder Técnico de Software / Sr Android Developer</h4>
-        <span class="text-sm italic text-gray-500">Mayo 2019 – Actualidad</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Desarrollo y mantenimiento de funcionalidades del checkout de Mercado Pago y otras librerías clave del ecosistema.</li>
-          <li>Liderazgo técnico de equipo, definición de arquitectura, mentoring, revisión de código y planificación técnica.</li>
-          <li>Conocimientos sólidos en arquitectura limpia (MVVM, separación por capas, use cases), coroutines, Retrofit 2, Koin, DI, testing, CI/CD.</li>
-          <li>Integraciones con herramientas como Bugsnag, Kibana, Alation para métricas y debugging.</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-xl font-semibold">IguanaFix — Android Developer</h4>
-        <span class="text-sm italic text-gray-500">Marzo 2018 – Abril 2019</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Desarrollo de la app para clientes de IguanaFix.</li>
-          <li>Stack: Kotlin, RxJava, Retrofit, Firebase, Room, ViewModel, Glide, Butter Knife, GoogleMaps API.</li>
-          <li>Uso de MVVM y componentes modernos de arquitectura de Android.</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-xl font-semibold">Fusap — Java Mobile Junior Programmer</h4>
-        <span class="text-sm italic text-gray-500">Abril 2016 – Febrero 2018</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Desarrollo de apps Android para empresas privadas.</li>
-          <li>Tecnologías: Firebase, GoogleMaps API, Volley, EventBus, Glide.</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-xl font-semibold">Codere Bingo — Técnico Electrónico</h4>
-        <span class="text-sm italic text-gray-500">Marzo 2015 – Marzo 2016</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Mantenimiento, limpieza y diagnóstico de máquinas electrónicas de juego.</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-xl font-semibold">OSED Entidad Educativa — Atención al Cliente</h4>
-        <span class="text-sm italic text-gray-500">Diciembre 2011 – Enero 2014</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Atención al cliente, ventas, administración, apertura y cierre del local.</li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-xl font-semibold">Freelancer — Técnico en Electrónica</h4>
-        <span class="text-sm italic text-gray-500">2008 – 2010</span>
-        <ul class="list-disc pl-5 mt-2 text-sm">
-          <li>Armado y soldadura de placas electrónicas a pedido de clientes particulares.</li>
-        </ul>
-      </div>
+  <h3 class="text-2xl font-bold mb-6 border-b pb-2">Experiencia Profesional</h3>
+  <div class="space-y-8">
+    <div>
+      <h4 class="text-xl font-semibold">Mercado Libre — Líder Técnico de Software / Sr Android Developer</h4>
+      <span class="text-sm italic text-gray-500">Mayo 2019 – Actualidad</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Desarrollo y mantenimiento de funcionalidades del checkout de Mercado Pago y otras librerías clave del ecosistema.</li>
+        <li>Liderazgo técnico de equipo, definición de arquitectura, mentoring, revisión de código y planificación técnica.</li>
+        <li>Conocimientos sólidos en arquitectura limpia (MVVM, separación por capas, use cases), coroutines, Retrofit 2, Koin, DI, testing, CI/CD.</li>
+        <li>Integraciones con herramientas como Bugsnag, Kibana, Alation para métricas y debugging.</li>
+      </ul>
     </div>
-  </section>
+    <div>
+      <h4 class="text-xl font-semibold">IguanaFix — Android Developer</h4>
+      <span class="text-sm italic text-gray-500">Marzo 2018 – Abril 2019</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Desarrollo de la app para clientes de IguanaFix.</li>
+        <li>Stack: Kotlin, RxJava, Retrofit, Firebase, Room, ViewModel, Glide, Butter Knife, GoogleMaps API.</li>
+        <li>Uso de MVVM y componentes modernos de arquitectura de Android.</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-xl font-semibold">Fusap — Java Mobile Junior Programmer</h4>
+      <span class="text-sm italic text-gray-500">Abril 2016 – Febrero 2018</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Desarrollo de apps Android para empresas privadas.</li>
+        <li>Tecnologías: Firebase, GoogleMaps API, Volley, EventBus, Glide.</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-xl font-semibold">Codere Bingo — Técnico Electrónico</h4>
+      <span class="text-sm italic text-gray-500">Marzo 2015 – Marzo 2016</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Mantenimiento, limpieza y diagnóstico de máquinas electrónicas de juego.</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-xl font-semibold">OSED Entidad Educativa — Atención al Cliente</h4>
+      <span class="text-sm italic text-gray-500">Diciembre 2011 – Enero 2014</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Atención al cliente, ventas, administración, apertura y cierre del local.</li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-xl font-semibold">Freelancer — Técnico en Electrónica</h4>
+      <span class="text-sm italic text-gray-500">2008 – 2010</span>
+      <ul class="list-disc pl-5 mt-2 text-sm">
+        <li>Armado y soldadura de placas electrónicas a pedido de clientes particulares.</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-  <section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
+<section id="educacion" class="px-4 py-10 max-w-4xl mx-auto">
   <h3 class="text-2xl font-bold mb-6 border-b pb-2">Educación</h3>
   <ul class="list-disc pl-5 text-sm space-y-4">
     <li>
@@ -162,18 +167,6 @@
       </ul>
     </div>
   </div>
-</section>
-
-<section id="contacto" class="px-4 py-10 max-w-4xl mx-auto">
-  <h3 class="text-2xl font-bold mb-6 border-b pb-2">Contacto</h3>
-  <ul class="text-sm">
-    <li><strong>Nombre:</strong> Jorge Daniel Gonzalez</li>
-    <li><strong>Email:</strong> <a href="mailto:jorgedaniel29.jg@gmail.com" class="underline">jorgedaniel29.jg@gmail.com</a></li>
-    <li><strong>Teléfono:</strong> +54 9 11 3020 8941</li>
-    <li><strong>Dirección:</strong> Dr. Gabriel Ardoino 490, Ramos Mejía, Buenos Aires</li>
-    <li><strong>LinkedIn:</strong> <a href="#" class="underline">(agregar enlace)</a></li>
-    <li><strong>GitHub:</strong> <a href="#" class="underline">(agregar enlace)</a></li>
-  </ul>
 </section>
 </body>
 </html>
